Revert "Merge pull request #1541 from confluentinc/merge-trunk"
This reverts commit fe334b24549f5f91d3268160fbc31cfd20d192c2, reversing
changes made to 2eb74f1461de71329f53ef70e27364f5ffe7d73c.